--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 19 10:58:17 CST 2025
-sdk.dir=C\:\\Users\\dream\\AppData\\Local\\Android\\Sdk
+#Fri Nov 21 10:54:03 CST 2025
+sdk.dir=D\:\\andoridstusdk
