--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 21 10:54:03 CST 2025
-sdk.dir=D\:\\andoridstusdk
+#Thu Dec 11 09:58:54 CST 2025
+sdk.dir=D\:\\dev\\Android_SDK
